-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b43
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083296 | emb-9 | Igor Ignatyev | P1 | Resolved | Fixed | team |
On Solaris-Sparc:
# Internal Error (/opt/jprt/T/P1/161306.iignatye/s/hotspot/src/share/vm/runtime/sweeper.cpp:485), pid=8900, tid=23
# assert(current->is_Code_cache_sweeper_thread()) failed: Must be
#
On Linux, 64 and 32-bit:
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fe451673cf7, pid=32160, tid=140617962202880
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-201411101613.iignatye.jdk9_hs-comp-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-201411101613.iignatye.jdk9_hs-comp-b00 compiled mode linux-amd64 compressed oops)
# Problematic frame:
# V [libjvm.so+0xfa0cf7] NMethodSweeper::sweep_code_cache()+0x1b7
#
# Internal Error (/opt/jprt/T/P1/161306.iignatye/s/hotspot/src/share/vm/runtime/sweeper.cpp:485), pid=8900, tid=23
# assert(current->is_Code_cache_sweeper_thread()) failed: Must be
#
On Linux, 64 and 32-bit:
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fe451673cf7, pid=32160, tid=140617962202880
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-201411101613.iignatye.jdk9_hs-comp-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-201411101613.iignatye.jdk9_hs-comp-b00 compiled mode linux-amd64 compressed oops)
# Problematic frame:
# V [libjvm.so+0xfa0cf7] NMethodSweeper::sweep_code_cache()+0x1b7
#
- backported by
-
JDK-8083296 compiler/whitebox/AllocationCodeBlobTest.java crashes / asserts
-
- Resolved
-
- duplicates
-
JDK-8065740 compiler/codecache/OverflowCodeCacheTest.java fails with SIGSEGV
-
- Closed
-
- relates to
-
JDK-8046809 vm/mlvm/meth/stress/compiler/deoptimize CodeCache is full.
-
- Closed
-
-
JDK-8072377 WhiteBox sweeper thread management bugs
-
- Closed
-