8064669: compiler/whitebox/AllocationCodeBlobTest.java crashes / asserts

Reviewed-by: kvn, anoll